--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ info@devstudio.com</a></li>
         </div>
     </section>
     <!-- ============================CLIENTS============================ -->
-    <!-- <section class="section">
+    <section class="section">
         <div class="container">
             <h2 class="hclient">Постоянные клиенты</h2>
 <ul class="client-flex"><li class="client-list"><a class="client-link" href=""><svg class="client-icon" width="106" height="60"><use href="./images/icons/sprite2.svg#icon-group" ></use></svg></a></li>
@@ -187,21 +187,18 @@ info@devstudio.com</a></li>
 <li class="client-list"><a class="client-link" href=""><svg class="client-icon" width="106" height="60"><use href="./images/icons/sprite2.svg#icon-group4"></use></svg></a></li>
 <li class="client-list"><a class="client-link" href=""><svg class="client-icon" width="106" height="60"><use href="./images/icons/sprite2.svg#icon-group5"></use></svg></a></li>
 <li class="client-list"><a class="client-link" href=""><svg class="client-icon" width="106" height="60"><use href="./images/icons/sprite2.svg#icon-group6"></use></svg></a></li></ul>
-    
-
         </div>
-    </section> -->
+    </section>
 </main>
 <!-- /* ==================FOOTER====================== */ -->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer__flex">
-            
-            <div>
+            <div class="footer-nav">
         <a href="" class="logodown" lang="en">
             <span class="web">Web</span>Studio</a>
 <address>
     <ul class="footer-list">
-<li><a class="footer__address" href="https://goo.gl/maps/vd5sE5UWaFMjiasX9"><p >г. Киев, пр-т Леси Украинки, 26</p></a></li>
+<li class="footer__list"><a class="footer__address" href="https://goo.gl/maps/vd5sE5UWaFMjiasX9">г. Киев, пр-т Леси Украинки, 26</a></li>
  <li class="footer__list"><a href="" class="footer__linknav">info@example.com</a></li>  
 <li class="footer__list"> <a href="" class="footer__linknav"> +38 099 111 11 11</a></li>
 </ul>
@@ -219,6 +216,7 @@ info@devstudio.com</a></li>
     <li class="footer__social-list">
         <a class="footer__social-link" href=""><svg class="footer__social-icon" height="20" width="20"><use href="./images/icons/sprite.svg#icon-linkedin4"></use></svg></a></li></ul>
 </div>
+<div class="footer-form__wrapper">
 <form action="footer-form">
     <b class="footer-form__b">Подпишитесь на рассылку</b>
     <span class="footer-form__span">
@@ -229,7 +227,8 @@ info@devstudio.com</a></li>
     </span>
 </form>
 </div>
-    </footer> -->
+</div>
+    </footer>
 <!-- ===================END FOOTER================ -->
 <div class="backdrop is-hidden" data-modal>
 <div class="modal">
