--- a/porfolio.html
+++ b/porfolio.html
@@ -88,8 +88,8 @@ card__description">Веб-сайт</p> </div></a></li>
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <div class="card__describe cool">
-                    <h3 class="card__sup-title">Постер New Orlean vs Golden<br> Star</h3>
+                <div class="card__describe">
+                    <h3 class="card__sup-title">Постер New Orlean vs Golden Star</h3>
                 <p class="
                 card__description">Дизайн</p>
                 </div>
@@ -229,57 +229,60 @@ card__description">Веб-сайт</p> </div></a></li>
  </section>
 </main>
 <!-- /* ======================FOOTER==================================== */ -->
-<footer class="footer">
-    <div class="container footer__flex">
-
-        <div>
-            <a href="" class="logodown" lang="en">
-                <span class="web">Web</span>Studio</a>
-            <address>
-                <ul class="footer-list">
-                <li><a class="footer__address"
-                        href="https://goo.gl/maps/vd5sE5UWaFMjiasX9">
-                        <p>г. Киев, пр-т Леси Украинки, 26</p>
-                    </a></li>
-                    <li class="footer__list"><a href="" class="footer__linknav">info@example.com</a></li>
-                    <li class="footer__list"> <a href="" class="footer__linknav"> +38 099 111 11 11</a></li>
+    <footer class="footer">
+        <div class="container footer__flex">
+            <div class="footer-nav">
+                <a href="" class="logodown" lang="en">
+                    <span class="web">Web</span>Studio</a>
+                <address>
+                    <ul class="footer-list">
+                        <li class="footer__list"><a class="footer__address" href="https://goo.gl/maps/vd5sE5UWaFMjiasX9">г.
+                                Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="footer__list"><a href="" class="footer__linknav">info@example.com</a></li>
+                        <li class="footer__list"> <a href="" class="footer__linknav"> +38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer__social">
+                <h2 class="footer__social-h">ПРИСОЕДИНЯЙТЕСЬ</h2>
+                <ul class="footer__ul-flex">
+                    <li class="footer__social-list">
+                        <a class="footer__social-link" href=""><svg class="footer__social-icon" height="20" width="20">
+                                <use href="./images/icons/sprite.svg#icon-instagram1"></use>
+                            </svg></a>
+                    </li>
+                    <li class="footer__social-list">
+                        <a class="footer__social-link" href=""><svg class="footer__social-icon" height="20" width="20">
+                                <use href="./images/icons/sprite.svg#icon-twitter2"></use>
+                            </svg></a>
+                    </li>
+                    <li class="footer__social-list">
+                        <a class="footer__social-link" href=""><svg class="footer__social-icon" height="20" width="20">
+                                <use href="./images/icons/sprite.svg#icon-facebook3"></use>
+                            </svg></a>
+                    </li>
+                    <li class="footer__social-list">
+                        <a class="footer__social-link" href=""><svg class="footer__social-icon" height="20" width="20">
+                                <use href="./images/icons/sprite.svg#icon-linkedin4"></use>
+                            </svg></a>
+                    </li>
                 </ul>
-            </address>
+            </div>
+            <div class="footer-form__wrapper">
+                <form action="footer-form">
+                    <b class="footer-form__b">Подпишитесь на рассылку</b>
+                    <span class="footer-form__span">
+                        <input type="email" name="user-email" required placeholder="E-mail" class="footer-form__imput">
+                        <button type="submit" class="footer-button">Подписаться
+                            <svg width="24" height="24">
+                                <use href="./images/icons/sprite.svg#icon-icon-send"></use>
+                            </svg>
+                        </button>
+                    </span>
+                </form>
+            </div>
         </div>
-        <div class="footer__social">
-            <h2 class="footer__social-h">ПРИСОЕДИНЯЙТЕСЬ</h2>
-            <ul class="footer__ul-flex">
-                <li class="footer__social-list"><a class="footer__social-link" href=""><svg class="footer__social-icon"
-                            height="20" width="20">
-                            <use href="./images/icons/sprite.svg#icon-instagram1"></use>
-                        </svg></a></li>
-                <li class="footer__social-list"><a class="footer__social-link" href=""><svg class="footer__social-icon"
-                            height="20" width="20">
-                            <use href="./images/icons/sprite.svg#icon-twitter2"></use>
-                        </svg></a></li>
-                <li class="footer__social-list"><a class="footer__social-link" href=""><svg class="footer__social-icon"
-                            height="20" width="20">
-                            <use href="./images/icons/sprite.svg#icon-facebook3"></use>
-                        </svg></a></li>
-                <li class="footer__social-list"><a class="footer__social-link" href=""><svg class="footer__social-icon"
-                            height="20" width="20">
-                            <use href="./images/icons/sprite.svg#icon-linkedin4"></use>
-                        </svg></a></li>
-            </ul>
-        </div>
-        <form action="footer-form">
-            <b class="footer-form__b">Подпишитесь на рассылку</b>
-            <span class="footer-form__span">
-                <input type="email" name="user-email"  required placeholder="E-mail" class="footer-form__imput">
-                <button type="submit" class="footer-button">Подписаться
-                    <svg width="24" height="24">
-                        <use href="./images/icons/sprite.svg#icon-icon-send"></use>
-                    </svg>
-                </button>
-            </span>
-        </form>
-    </div>
-</footer>
+    </footer>
 
 </body>
 </html>
