--- a/porfolio.html
+++ b/porfolio.html
@@ -59,7 +59,7 @@
     
                 <ul class="mobile-menu__nav">
                     <li class="mobile-menu__list">
-                        <a href="" class="mobile-menu__link">Студия</a>
+                        <a href="./index.html" class="mobile-menu__link">Студия</a>
                     </li>
                     <li class="mobile-menu__list">
                         <a href="" class="mobile-menu__link">Портфолио</a>
