--- a/index.html
+++ b/index.html
@@ -113,11 +113,17 @@ info@devstudio.com</a></li>
     <h2 class="main-headlines">Чем мы занимаемся</h2>
     <ul class="images">
         <li class="img-list"><div class="relat">
-            <img src="./images/img1.jpg" width=370 height="294" alt="разработчик работает над проектом"><div class="absol"><p class="descrip">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЕ</p></div></div></li>
+            <picture>
+                <source srcset="./images/occupation/img.jpg 1x, ./images/occupation/img@2x.jpg 2x" media="min-width: 1200px">
+                <source srcset="./images/occupation/img1vb.webp 1x" media="min-width: 1200px"
+                type="image/webp">
+            <img src="#" alt="разработчик работает над проектом">
+            </picture>
+           <div class="absol"><p class="descrip">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЕ</p></div></div></li>
         <li class="img-list"><div class="relat">
-            <img src="./images/img2.jpg" width="370" height="294" alt="дизайнеры работают над мобильным приложением"><div class="absol"><p class="descrip">МОБИЛЬНЫЕ ПРИЛОЖЕНИЕ</p></div></div></li>
+            <img src="./images/occupation/img2.jpg" alt="дизайнеры работают над мобильным приложением"><div class="absol"><p class="descrip">МОБИЛЬНЫЕ ПРИЛОЖЕНИЕ</p></div></div></li>
         <li class="img-list"><div class="relat">
-            <img src="./images/img3.jpg" width="370" height="294" alt="креативный веб дизайнер выбирает цвет на планшете"><div class="absol"><p class="descrip">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p></div></div></li>
+            <img src="./images/occupation/img3.jpg" alt="креативный веб дизайнер выбирает цвет на планшете"><div class="absol"><p class="descrip">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p></div></div></li>
     </ul>
     </div>
 </section>
