--- a/porfolio.html
+++ b/porfolio.html
@@ -62,7 +62,7 @@
                         <a href="./index.html" class="mobile-menu__link">Студия</a>
                     </li>
                     <li class="mobile-menu__list">
-                        <a href="" class="mobile-menu__link">Портфолио</a>
+                        <a href="" class="mobile-menu__link main">Портфолио</a>
                     </li>
                     <li class="mobile-menu__list">
                         <a href="" class="mobile-menu__link">Контакты</a>
