--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ info@devstudio.com</a></li>
         
         <ul class="mobile-menu__nav">
             <li class="mobile-menu__list">
-                <a href="" class="mobile-menu__link">Студия</a></li>
+                <a href="" class="mobile-menu__link main">Студия</a></li>
             <li class="mobile-menu__list">
                 <a href="./porfolio.html" class="mobile-menu__link">Портфолио</a></li>
             <li class="mobile-menu__list">
@@ -57,8 +57,8 @@ info@devstudio.com</a></li>
         </ul>
 
         <ul class="mobile-menu__contact">
-            <li class="mobile-menu__numb">+38 096 111 11 11</li>
-            <li class="mobile-menu__mail">info@devstudio.com</li>
+            <li class="mobile-menu__numb"><a href="tel: +38 096 111 11 11" class="mobile-menu__link-numb">+38 096 111 11 11</a></li>
+            <li class="mobile-menu__mail"><a href="" class="mobile-menu__link-mail">info@devstudio.com</a></li>
         </ul>
         <ul class="mobile__menu-social">
             <li class="mobile-menu__soc-list">
