--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ info@devstudio.com</a></li>
         </ul>
 
         <ul class="mobile-menu__contact">
-            <li class="mobile-menu__numb"><a href="tel: +38 096 111 11 11" class="mobile-menu__link-numb">+38 096 111 11 11</a></li>
+            <li class="mobile-menu__numb"><a href="" class="mobile-menu__link-numb">+38 096 111 11 11</a></li>
             <li class="mobile-menu__mail"><a href="" class="mobile-menu__link-mail">info@devstudio.com</a></li>
         </ul>
         <ul class="mobile__menu-social">
