--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ info@devstudio.com</a></li>
             <source srcset="./images/team/olga/img.jpg 1x, ./images/team/olga/img@2x.jpg 2x" media="(min-width: 768px)">
         <source srcset="./images/team/olga/img-mobile.webp 1x, ./images/team/olga/img-mobile@2x.webp 2x"
             media="(max-width: 767px)">
-            <source srcset="./images/team/olga/img-mobile.jpg 1x, ./images/team/olga/img-mobile@2x.jpg" media="(max-width: 767px)">
+            <source srcset="./images/team/olga/img-mobile.jpg 1x, ./images/team/olga/img-mobile@2x.jpg 2x" media="(max-width: 767px)">
             <img src="#" alt="Product Designer" class="img-developer">
         </picture>
             <div class="cards-work">
