--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@ info@devstudio.com</a></li>
         
         </label>
        <input type="checkbox" name="submit" id="accept-policy" class="modal-checkbox visual-hiden">
-        <label for="accept-policy" class="modal-checkbox-label">Соглашаюсь с рассылкой и принимаю
-             <a href="" class="modal-form__link">Условия договора</a></label>
+        <label for="accept-policy" class="modal-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp;
+              <a href="" class="modal-form__link"> Условия договора</a></label>
              <button type="submit" class="modal-form__btn">Отправить</button>
 
         </form>
