--- a/porfolio.html
+++ b/porfolio.html
@@ -70,8 +70,8 @@
                 </ul>
     
                 <ul class="mobile-menu__contact">
-                    <li class="mobile-menu__numb">+38 096 111 11 11</li>
-                    <li class="mobile-menu__mail">info@devstudio.com</li>
+                    <li class="mobile-menu__numb"><a href="" class="mobile-menu__link-numb">+38 096 111 11 11</a></li>
+                    <li class="mobile-menu__mail"><a href="" class="mobile-menu__link-mail">info@devstudio.com</a></li>
                 </ul>
                 <ul class="mobile__menu-social">
                     <li class="mobile-menu__soc-list">
